--- a/academic.css
+++ b/academic.css
@@ -148,7 +148,7 @@ p {
 }
 
 pre, code {
-    font-family: 'Latin Modern Mono Light', "Latin Modern Mono", monospace !important;
+    font-family: JetBrains Mono, monospace !important;
 }
 
 .footnotes {
